<resources>
    <string name="app_name">ShopEase</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="signup">SIGN UP</string>
    <string name="or">OR</string>
    <string name="aleardy_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="me">Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="brands_title">Brands</string>
    <string name="search">Search</string>
    <string name="category_title">Category</string>
    <string name="all">All</string>
    <string name="kids">Kids</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="egp">EGP</string>
    <string name="order_list_title">Order List</string>
    <string name="created_at">Created At:</string>
    <string name="order_item_title">Order Item</string>
    <string name="name">Name: </string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="total_price">Total Price:</string>
    <string name="payment_method">Payment Method:</string>

    <string name="products">Products</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="description">Description</string>
    <string name="sale">Sale</string>

    <string name="countryName">countryName</string>
    <string name="Country">Country</string>
    <string name="Address">Address</string>
    <string name="first_name">Firstname</string>
    <string name="second_name">Lastname</string>

    <string name="clientID">828681279025-l3vqdrrh527h4vhhsb1dk4n40ljo471b.apps.googleusercontent.com</string>
    <string name="Building">Building</string>
    <string name="payment">Payment</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="cart_list">Cart List</string>
    <string name="my">My</string>
    <string name="discount">Discount</string>
    <string name="apply">Apply</string>
    <string name="checkout">CheckOut</string>
    <!--    <string name="log_out">Log Out</string>-->
    <!--    <string name="about_us">About Us</string>-->
    <!--    <string name="setting">Setting</string>-->
    <!--    <string name="currency">Currency</string>-->
    <!--    <string name="tvaddress">Address</string>-->
    <string name="available_sizes">Available Sizes</string>
    <string name="available_color">Available Colors</string>

    <string name="you_are_guest">You are guest</string>
    <string name="cancel">Cancel</string>
    <string name="delete_fav">Remove product</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="orders">Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="setting">Setting</string>
    <string name="sale_up_to_50">"Sale up to 50% "</string>
    <string name="Press_on_Photo">Press on Photo!</string>
    <string name="price_150">Price: 150</string>
    <string name="subtotal">SubTotal</string>
    <string name="curruncy">Currency</string>
    <string name="about_us">About Us</string>
    <string name="logout">Log Out</string>
    <string name="phone">Phone</string>
    <string name="confirm">Confirm</string>
    <string name="my_address">My Address</string>
    <string name="new_address">New Address</string>
    <string name="city">City</string>
    <string name="choose_on_the_map">choose on the map?</string>
    <string name="edit">edit</string>
    <string name="place_order">Place Order</string>
    <string name="reviews">Reviews</string>
    <string name="suggestions">Suggestions</string>
    <string name="view_more">View More</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="guest"><![CDATA[Guest ->]]></string>
    <string name="alert_guest_msg">you don\'t able to use this feature, if you want to use it, please login</string>
    <string name="order_created">Order Created</string>
    <string name="order_created_msg">Your order has been successfully created.</string>
    <string name="ok">OK</string>
    <string name="remove_fav_msg">Are you sure you want to remove this item?</string>
    <string name="team_member">Team Members:</string>
    <string name="aboutus_desc">This application is our graduation project. Try using this application and if you find any problems, please contact us to solve them and improve our application.</string>
    <string name="sara">1. Sarah Ahmed</string>
    <string name="nermeen">2. Nermen Hemda</string>
    <string name="yomna">3. Yomna Magdy</string>
    <string name="language">Language</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>

    <string name="coupon">Coupon</string>


</resources>