<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_id"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        />

    <item
        android:id="@+id/category_id"
        android:title="@string/category"
        android:icon="@drawable/baseline_apps_24"
        />

    <item
        android:id="@+id/fav_id"
        android:title="@string/favorite"
        android:icon="@drawable/baseline_favorite_border_24"
        />
    <item
        android:id="@+id/cart_id"
        android:title="@string/cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        />

    <item
        android:id="@+id/me_id"
        android:title="@string/me"
        android:icon="@drawable/baseline_person_pin_24"
        />

</menu>