<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".setting.view.settingFragment">

    <TextView
        android:id="@+id/textViewCardList"
        android:layout_width="249dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="137dp"
        android:text="@string/setting"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1Adress"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="23dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewCardList">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="46dp"
                android:layout_height="49dp"
                android:src="@drawable/address_svgrepo_com" />

            <TextView
                android:id="@+id/cardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                android:text="@string/Address"

                android:textColor="#090909"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2Currnucy"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="23dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1Adress">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iconCurruncy"
                android:layout_width="45dp"
                android:layout_height="36dp"
                android:src="@drawable/currency_dollar_svgrepo_com" />

            <TextView
                android:id="@+id/cardText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                android:text="@string/curruncy"

                android:textColor="#0C0C0C"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3About"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="23dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2Currnucy">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iconAbout"
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:src="@drawable/about_filled_svgrepo_com" />

            <TextView
                android:id="@+id/cardText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/about_us"

                android:textColor="#0E0E0E"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLanguage"
        android:layout_width="355dp"
        android:layout_height="73dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="23dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3About">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/langIcon"
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:src="@drawable/language" />

            <TextView
                android:id="@+id/cardText33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/language"
                android:textColor="#0E0E0E"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="85dp"
        android:paddingHorizontal="70dp"
        android:backgroundTint="#000000"

        android:text="@string/logout"

        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>